[gd_scene load_steps=17 format=2]

[ext_resource path="res://Mode.gd" type="Script" id=1]
[ext_resource path="res://New Super Mario Font U.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/btn_normal.png" type="Texture" id=4]
[ext_resource path="res://images/btn_pressed.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="DynamicFont" id=10]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 38
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Mode" type="Node2D"]
script = ExtResource( 1 )

[node name="btn_normal" type="Button" parent="."]
margin_left = 160.0
margin_top = 150.0
margin_right = 410.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_hardcore" type="Button" parent="."]
margin_left = 160.0
margin_top = 300.0
margin_right = 410.0
margin_bottom = 420.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Hardcore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_incubo" type="Button" parent="."]
margin_left = 160.0
margin_top = 450.0
margin_right = 410.0
margin_bottom = 570.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Nightmare"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titolo" type="Label" parent="."]
margin_left = 392.214
margin_top = 51.0
margin_right = 698.214
margin_bottom = 91.0
custom_fonts/font = SubResource( 11 )
text = "Select difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption_normale" type="Label" parent="."]
margin_left = 486.731
margin_top = 144.703
margin_right = 952.731
margin_bottom = 256.703
custom_fonts/font = SubResource( 12 )
text = "- 5 errors for each char
- 1 hint for each char
- 120 seconds for each char

Nice for beginners."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption_hardcore" type="Label" parent="."]
margin_left = 488.84
margin_top = 295.378
margin_right = 905.84
margin_bottom = 419.378
custom_fonts/font = SubResource( 12 )
text = "- 5 errors for each game
- no hints
- 60 seconds for each char

Kinda hard, not gonna lie."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption_incubo" type="Label" parent="."]
margin_left = 490.0
margin_top = 444.0
margin_right = 982.0
margin_bottom = 579.0
custom_fonts/font = SubResource( 12 )
text = "- 5 errors for each game
- each error gives you 1 sec penalty
- no hints
- 30 seconds for each char

Don't do it."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn_normal" to="." method="_on_btn_normal_pressed"]
[connection signal="pressed" from="btn_hardcore" to="." method="_on_btn_hardcore_pressed"]
[connection signal="pressed" from="btn_incubo" to="." method="_on_btn_incubo_pressed"]
